# fpgk8s

./: Cargo.toml  deny.toml
k8s-deviceplugin/: Cargo.toml  build.rs
plugin/: Cargo.toml  plugin_0.1.0.bb
plugin/src/: main.rs
