[workspace]
members = ["k8s-deviceplugin", "plugin"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[patch.crates-io]
h2 = { git = "https://github.com/arthurlm/h2.git", rev = "986308cd2a3665453f74dbd50420260a5ce708f9" }
