[package]
name = "plugin"
version = "0.1.0"
authors = ["hasheddan <georgedanielmangum@gmail.com>"]
edition = "2018"

[dependencies]
k8s-deviceplugin = { path = "../k8s-deviceplugin" }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net"] }
tokio-stream = { version =  "0.1", features = [ "net" ] }
tower = { version = "0.4" }
anyhow = "1.0"
async-stream = "0.3"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"
